Add <figure> tag in html and add @media queries to main.css

--- a/layout/index.html
+++ b/layout/index.html
@@ -10,10 +10,26 @@
 <nav>
 	<div class="logo"><img src="../images/logo/globe-logo.png"></div>
 	<ul>
-		<li>NEWS</li>
-		<li>PROJECTS</li>
-		<li>ABOUT US</li>
-		<li>CONTACT</li>
+		<li>
+			<figure>
+				<figcaption>NEWS</figcaption>
+			</figure>
+		</li>
+		<li>
+			<figure>
+				<figcaption>PROJECTS</figcaption>
+			</figure>
+		</li>
+		<li>
+			<figure>
+				<figcaption>ABOUT US</figcaption>
+			</figure>
+		</li>
+		<li>
+			<figure>
+				<figcaption>CONTACT</figcaption>
+			</figure>
+		</li>
 	</ul>
 	
 </nav>
