Add navigation icons (need to resize them) under 780px

--- a/layout/index.html
+++ b/layout/index.html
@@ -12,21 +12,25 @@
 	<ul>
 		<li>
 			<figure>
+				<img src="../images/navIcons/news.svg">
 				<figcaption>NEWS</figcaption>
 			</figure>
 		</li>
 		<li>
 			<figure>
+				<img src="../images/navIcons/projects.svg">
 				<figcaption>PROJECTS</figcaption>
 			</figure>
 		</li>
 		<li>
 			<figure>
+				<img src="../images/navIcons/about.svg">
 				<figcaption>ABOUT US</figcaption>
 			</figure>
 		</li>
 		<li>
 			<figure>
+				<img src="../images/navIcons/contact.svg">
 				<figcaption>CONTACT</figcaption>
 			</figure>
 		</li>
