--- a/stylesheets/navigation/main.css
+++ b/stylesheets/navigation/main.css
@@ -9,7 +9,7 @@ nav {
 	width:100%;
 	height: 5em;
 
-	
+
 	position:fixed;
 	bottom:0;
 	display:flex;
@@ -43,7 +43,7 @@ ul{
 
 li{	margin-right: 2em;}
 
-
+li img {display: none;}
 
 
 @media all and (max-width:1100px) {	
@@ -52,7 +52,8 @@ li{	margin-right: 2em;}
 
 @media all and (max-width: 780px) {
 	ul { justify-content:space-around; }
-	.logo { display: none;}
+	.logo { display: none; }
+	li img { display: block;}
 }
 
 
