--- a/stylesheets/navigation/main.css
+++ b/stylesheets/navigation/main.css
@@ -34,10 +34,19 @@ ul{
 	font-family:"bitter";
 	color:white;
 
-	display: flex;
+	display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+	display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+ 	display: -ms-flexbox;      /* TWEENER - IE 10 */
+  	display: -webkit-flex;     /* NEW - Chrome */
+  	display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+
 	-webkit-flex-flow: row wrap;
 	justify-content:center;
-	flex:1 100%;		
+	-webkit-box-flex: 1 100%;      /* OLD - iOS 6-, Safari 3.1-6 */
+  	-moz-box-flex: 1 100%;         /* OLD - Firefox 19- */	
+  	-webkit-flex: 1 100%;          /* Chrome */
+	-ms-flex: 1 100%;              /* IE 10 */
+	flex: 1 100%;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */	
 }
 
 li{	margin-right: 2em;}
@@ -60,11 +69,10 @@ li img {display: none;}
 
 	.logo { display: none; }
 
-
 	figure img { margin:1px auto 2px auto; display: block;}
 }
 
 @media all and (max-width: 360px) { 
-	body {font-size: 6px;}
+	body { font-size: 6px; }
 }
 
