--- a/stylesheets/navigation/main.css
+++ b/stylesheets/navigation/main.css
@@ -1,76 +1,89 @@
 * {
-	margin: 0;
-	padding:0;
+	margin:  0;
+	padding: 0;
 }
 
 body, html { font-size: 10px; }
 
 nav {
-	width:100%;
+	width:  100%;
 	height: 50px;
-
-	position:fixed;
-	bottom:0;
-	display:flex;
-	
+	bottom:    0;
+	display:    flex;
+	position:  fixed;
+	border-top: 3.5px solid #999;
 
 }
 
 .logo {
-	padding:5px;
-	background-color:#262626;
-	text-align:center;
-	
-	flex-basis:35%;
+	padding: 	5px;
+	flex-basis: 35%;
+	text-align: 	   center;
+	background-color: #262626;
 }
 
 .logo img {	width:25em; }
 
 ul{
-	padding:10px;
-	list-style: none;
+	color:		 white;
+	padding: 	  10px;
+	font-size:	 2.4em;
+	list-style:   none;
+	font-family: "bitter";
 	background-color: #262626;
-	font-size:2.4em;
-	font-family:"bitter";
-	color:white;
 
-	display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-	display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
- 	display: -ms-flexbox;      /* TWEENER - IE 10 */
-  	display: -webkit-flex;     /* NEW - Chrome */
-  	display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+	display:  -webkit-box; 			/* OLD - iOS 6-, Safari 3.1-6 */
+	display: 	 -moz-box; 			/* OLD - Firefox 19- (buggy but mostly works) */
+ 	display:  -ms-flexbox; 			/* TWEENER - IE 10 */
+  	display: -webkit-flex; 			/* NEW - Chrome */
+  	display:   		 flex; 			/* NEW, Spec - Opera 12.1, Firefox 20+ */
 
 	-webkit-flex-flow: row wrap;
-	justify-content:center;
-	-webkit-box-flex: 1 100%;      /* OLD - iOS 6-, Safari 3.1-6 */
-  	-moz-box-flex: 1 100%;         /* OLD - Firefox 19- */	
-  	-webkit-flex: 1 100%;          /* Chrome */
-	-ms-flex: 1 100%;              /* IE 10 */
-	flex: 1 100%;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */	
+	justify-content: 	 center;
+	-webkit-box-flex: 1 100%;		/* OLD - iOS 6-, Safari 3.1-6 */
+  	-moz-box-flex: 1 100%;			/* OLD - Firefox 19- */	
+  	-webkit-flex: 1 100%;			/* Chrome */
+	-ms-flex: 1 100%;				/* IE 10 */
+	flex: 1 100%;					/* NEW, Spec - Opera 12.1, Firefox 20+ */	
 }
 
-li{	margin-right: 2em;}
+li{	margin-right:  2em; }
+li img { display: none; }
 
-li img {display: none;}
-
-
-@media all and (max-width:1100px) {	
-	body { font-size: 8px; }
+#magic-line { 
+	width: 	100px; 
+	height:   3.5px; 
+	bottom:  -3.5px; 
+	left: 		0; 
+	position:   absolute;
+	background: #ff0000;
 }
+
+
+@media all and (max-width: 1100px) {	
+	body { font-size: 	8px; }
+}
+
 
 @media all and (max-width: 780px) {
 	ul { 
-		padding: 3px;
+		padding: 		3px;
+		font-size: 	  1.5em;
 		font-weight: normal;
-		font-size: 1.5em;
-
-		justify-content:space-around;
+		justify-content: space-around;
 	}
 
+	nav   { border:   0px; }
 	.logo { display: none; }
+	#magic-line { display: none; }
 
-	figure img { margin:1px auto 2px auto; display: block;}
+
+	figure img { 
+		margin:  1px auto 2px auto;
+		display: block;
+	}
 }
+
 
 @media all and (max-width: 360px) { 
 	body { font-size: 6px; }
