--- a/stylesheets/navigation/main.css
+++ b/stylesheets/navigation/main.css
@@ -15,10 +15,20 @@ nav {
 
 }
 
+
+nav{
+	width: 100%;
+	display:  -webkit-box; 			/* OLD - iOS 6-, Safari 3.1-6 */
+	display: 	 -moz-box; 			/* OLD - Firefox 19- (buggy but mostly works) */
+ 	display:  -ms-flexbox; 			/* TWEENER - IE 10 */
+  	display: -webkit-flex; 			/* NEW - Chrome */
+  	display:   		 flex; 			/* NEW, Spec - Opera 12.1, Firefox 20+ */
+}
+
 .logo {
-	padding: 	5px;
-	flex-basis: 35%;
-	text-align: 	   center;
+	padding: 5px;
+	width:   25%;
+	text-align: 	  center;
 	background-color: #262626;
 }
 
@@ -32,22 +42,29 @@ ul{
 	font-family: "bitter";
 	background-color: #262626;
 
+
 	display:  -webkit-box; 			/* OLD - iOS 6-, Safari 3.1-6 */
 	display: 	 -moz-box; 			/* OLD - Firefox 19- (buggy but mostly works) */
  	display:  -ms-flexbox; 			/* TWEENER - IE 10 */
   	display: -webkit-flex; 			/* NEW - Chrome */
   	display:   		 flex; 			/* NEW, Spec - Opera 12.1, Firefox 20+ */
 
-	-webkit-flex-flow: row wrap;
-	justify-content: 	 center;
-	-webkit-box-flex: 1 100%;		/* OLD - iOS 6-, Safari 3.1-6 */
-  	-moz-box-flex: 1 100%;			/* OLD - Firefox 19- */	
-  	-webkit-flex: 1 100%;			/* Chrome */
-	-ms-flex: 1 100%;				/* IE 10 */
-	flex: 1 100%;					/* NEW, Spec - Opera 12.1, Firefox 20+ */	
+
+	-webkit-box-pack: 		 center;
+  	-moz-box-pack: 			 center;
+  	-ms-flex-pack: 			 center;
+  	-webkit-justify-content: center;
+  	justify-content: 		 center;
+	
+	-webkit-box-flex: 1;		/* OLD - iOS 6-, Safari 3.1-6 */
+  	-moz-box-flex: 1 ;			/* OLD - Firefox 19- */	
+	-ms-flex: 1;				/* IE 10 */
+  	-webkit-flex: 1;			/* Chrome */
+	flex: 1;					/* NEW, Spec - Opera 12.1, Firefox 20+ */	
 }
 
-li{	margin-right:  2em; }
+li{	margin-right:  2em;}
+
 li img { display: none; }
 
 #magic-line { 
