--- a/stylesheets/navigation/main.css
+++ b/stylesheets/navigation/main.css
@@ -17,7 +17,7 @@ nav {
 
 
 nav{
-	width: 100%;
+	width:			 100%;
 	display:  -webkit-box; 			/* OLD - iOS 6-, Safari 3.1-6 */
 	display: 	 -moz-box; 			/* OLD - Firefox 19- (buggy but mostly works) */
  	display:  -ms-flexbox; 			/* TWEENER - IE 10 */
@@ -60,19 +60,19 @@ ul{
   	-moz-box-flex: 	  1;			/* OLD - Firefox 19- */	
 	-ms-flex: 		  1;			/* IE 10 */
   	-webkit-flex: 	  1;			/* Chrome */
-	flex: 1;						/* NEW, Spec - Opera 12.1, Firefox 20+ */	
+	flex:			  1;			/* NEW, Spec - Opera 12.1, Firefox 20+ */	
 }
 
 li{	margin-right:  2em; }
 li img { display: none; }
 
 #magic-line { 
-	width: 	100px; 
+	width: 	  100px; 
 	height:   3.5px; 
 	bottom:  -3.5px; 
-	left: 		0; 
+	left: 		  0; 
 	position:   absolute;
-	background: #ff0000;
+	background:  #ff0000;
 }
 
 
@@ -82,32 +82,36 @@ li img { display: none; }
 
 
 @media all and (max-width: 780px) {
+
+	nav  { 	  border:   0px; }
+
 	ul { 
-		padding: 		3px;
+		padding: 		0px;
 		font-size: 	  1.5em;
 		font-weight: normal;
 
 		-webkit-box-pack: justify;
 	  	-moz-box-pack: 	  justify;
 	  	-ms-flex-pack: 	  justify;
-	  	-webkit-justify-content: space-between;
-	  	justify-content: 		 space-between;
+	  	-webkit-justify-content: space-around;
+	  	justify-content: 		 space-around;
 	}
 
-
-	nav   { border:   0px; }
-	.logo { display: none; }
-	#magic-line { display: none; }
+	li:first-child { margin-left:15px; } 
+	.logo 		   { 	display: none; }
+	#magic-line    { 	display: none; }
 
 
 	figure img { 
 		margin:  1px auto 2px auto;
-		display: block;
+		display: 			 block;
 	}
 }
 
 
 @media all and (max-width: 360px) { 
+
 	body { font-size: 6px; }
+
 }
 
