--- a/stylesheets/navigation/main.css
+++ b/stylesheets/navigation/main.css
@@ -75,6 +75,10 @@ li img { display: none; }
 	background:  #ff0000;
 }
 
+a, a:hover, a:focus, a:active {
+	text-decoration: none;
+	color: 			 #fff;
+}
 
 @media all and (max-width: 1100px) {	
 	body { font-size: 	8px; }
@@ -105,6 +109,10 @@ li img { display: none; }
 	figure img { 
 		margin:  1px auto 2px auto;
 		display: 			 block;
+	}
+
+	a:hover, a:focus, a:active {
+		color: #aa0000;
 	}
 }
 
