--- a/stylesheets/navigation/main.css
+++ b/stylesheets/navigation/main.css
@@ -5,7 +5,7 @@
 
 body, html { font-size: 10px; }
 
-nav {
+.navigation {
 	width:  100%;
 	height: 50px;
 	bottom:    0;
@@ -16,7 +16,7 @@ nav {
 }
 
 
-nav{
+.navigation{
 	width:			 100%;
 	display:  -webkit-box; 			/* OLD - iOS 6-, Safari 3.1-6 */
 	display: 	 -moz-box; 			/* OLD - Firefox 19- (buggy but mostly works) */
@@ -34,7 +34,7 @@ nav{
 
 .logo img {	width:25em; }
 
-ul{
+#nav_ul{
 	color:		 white;
 	padding: 	  10px;
 	font-size:	 2.4em;
@@ -87,9 +87,9 @@ a, a:hover, a:focus, a:active {
 
 @media all and (max-width: 780px) {
 
-	nav  { 	  border:   0px; }
+	.navigation  { 	  border:   0px; }
 
-	ul { 
+	#nav_ul { 
 		padding: 		0px;
 		font-size: 	  1.5em;
 		font-weight: normal;
